--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "lwip-encoder",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "index.js",
   "dependencies": {
     "nan": "~1.4.1",
-    "node-pre-gyp": "0.6.4"
+    "node-pre-gyp": "git://github.com/willerce/node-pre-gyp"
   },
   "bundledDependencies": [
     "node-pre-gyp"
@@ -14,7 +14,8 @@
     "module_path": "./lib/binding/{configuration}/{node_abi}-{platform}-{arch}/",
     "remote_path": "./{module_name}/v{version}/{configuration}/",
     "package_name": "{module_name}-v{version}-{node_abi}-{platform}-{arch}.tar.gz",
-    "host": "https://airdroid-support-lwip.s3.amazonaws.com"
+    "host": "https://airdroid-support-lwip.s3.amazonaws.com",
+    "download_host": "https://dn-lwip.qbox.me/"
   },
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build",
