--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,6 +22,12 @@ environment:
     - nodejs_version: 0.12.2
       platform: x64
       msvs_toolset: 12
+    - nodejs_version: 0.12.3
+      platform: x86
+      msvs_toolset: 12
+    - nodejs_version: 0.12.3
+      platform: x64
+      msvs_toolset: 12
 
 os: Visual Studio 2014 CTP4
 
